--- a/Visualization.ipynb
+++ b/Visualization.ipynb
@@ -158,7 +158,9 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "allTitles = list(youtube_data['title'])\n",
@@ -787,7 +789,9 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import nltk\n",
@@ -878,7 +882,9 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from collections import Counter\n",
@@ -2379,7 +2385,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ggplot(youtube_data, aes(x = \"titleCompound\", y = \"viewCount\")) + \\\n",
@@ -2436,6 +2444,243 @@
     "ggplot(youtube_data, aes(x = \"descriptionCompound\", y = \"viewCount\")) + \\\n",
     "    geom_point()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        [liebherr, lb, 28, -, rotary, drilling, rig, f...\n",
+       "1        [rita, ora-i, will, never, let, you, down, lyr...\n",
+       "2                          [sylvans, =, love, (re-upload)]\n",
+       "3                                 [after, apple, day, hcg]\n",
+       "4        [serenade, to, a, cuckoo, -, guitar, &, piano,...\n",
+       "5                  [ellen, scares, her, staff, again, lol]\n",
+       "6                                        [arkham, monster]\n",
+       "7        [drawing, the, incredible, hulk, by, stephen, ...\n",
+       "8        [phil, taylor, back, to, winning, ways, in, th...\n",
+       "9            [star, trek, into, darkness, [3d], -download]\n",
+       "10                    [chair, dance, -, up, dance, studio]\n",
+       "11       [need, for, speed, world, -, airtime, achievem...\n",
+       "12       [my, talking, tom:, jungle, shot, -, gameplay,...\n",
+       "13       [ionikos, for, ever, handball, best, goals, vo...\n",
+       "14                        [shinee, -, dream, girl, [live]]\n",
+       "15       [why, is, the, moon, hollow, /, moon, matrix, ...\n",
+       "16                   [waialeale, -, blue, hole, adventure]\n",
+       "17                                          [rampla_4.wmv]\n",
+       "18       [apple, orchard, @, kent,, uk, 1, (, 1st, appl...\n",
+       "19       [new, mortal, kombat, sub, zero, action, figur...\n",
+       "20                   [1, step, earwire, maker, revised, 1]\n",
+       "21       [final, fantasy, vii, piano, collections, -, m...\n",
+       "22       [how, to, remove, climate, control, a/c, on, a...\n",
+       "23                                        [musical, coral]\n",
+       "24       [android, desktop, integration, -, gnome, shel...\n",
+       "25       [legendary, lovers, -, katy, perry, (hasit, na...\n",
+       "26       [wolverhampton:, wolves, fc, pitch, invasion, ...\n",
+       "27       [club, penguin-, ac, 3000, and, snow, festival...\n",
+       "28              [dvd, copy, using, mac, disk, utility.mp4]\n",
+       "29             [gopro, hero4, battery, eliminator, review]\n",
+       "                               ...                        \n",
+       "92161            [fs, seminar, -, natural, baits, inshore]\n",
+       "92162             [ronnie, whelan, after, dinner, speaker]\n",
+       "92163                  [twilight, saga-new, moon, part, 4]\n",
+       "92164              [mw3:, boss, infected, lobby, gameplay]\n",
+       "92165                       [hippo, dance, remix, (funny)]\n",
+       "92166     [bill, t, jones:, dancing, and, the, humanities]\n",
+       "92167    [fazeclan:, sniping, with, style, -, edited, b...\n",
+       "92168                     [how, does, 3d, printing, work?]\n",
+       "92169                   [pmmp, -, lautturi, (drum, cover)]\n",
+       "92170                             [tribute, logan, bailly]\n",
+       "92171                       [4.5hp, tecumseh, lawn, mower]\n",
+       "92172                               [ddr, map, v1.0, 2013]\n",
+       "92173    [westlife, back, home, tour, wembley., you, ra...\n",
+       "92174    [marvel, super, hero, squad, online, silver, c...\n",
+       "92175    [godzilla, featurette, -, caring, about, the, ...\n",
+       "92176     [fifa, 12, manager, mode, |, stoke, city, ep.11]\n",
+       "92177    [what's, stem, cell, therapy?, dr, bill, johns...\n",
+       "92178    [sc24.com_adidas, f50, adizero, prime, fg, unp...\n",
+       "92179           [ldff, class, -, no, kidding, line, dance]\n",
+       "92180    [5, of, 5, -, dr., buttar, sets, the, record, ...\n",
+       "92181              [drawing, time, lapse:, stone, surface]\n",
+       "92182    [ruben, limardo's, fleche, :, an, indepth, ana...\n",
+       "92183                         [virtua, tennis, (demo, pc)]\n",
+       "92184    [\"pillar, of, fire\", pt., 4, in, memory, of, s...\n",
+       "92185    [new, super, mario, bros, wii, welt, 9, level, 2]\n",
+       "92186                   [burning, nike, airmax, (part, 2)]\n",
+       "92187                 [ps3, saints, row, 2, neo, creating]\n",
+       "92188    [mista-d, (noor, einy/light, of, my, eye), liv...\n",
+       "92189    [total, beauty, makeover:, dog, edition:, greg...\n",
+       "92190    [06, -, slam, jam, peon, (quad, city, dj's, vs...\n",
+       "Name: title, Length: 92191, dtype: object"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "import string\n",
+    "def process(text, lemmatizer=nltk.stem.wordnet.WordNetLemmatizer()):\n",
+    "    \"\"\" Normalizes case and handles punctuation\n",
+    "    Inputs:\n",
+    "        text: str: raw text\n",
+    "        lemmatizer: an instance of a class implementing the lemmatize() method\n",
+    "                    (the default argument is of type nltk.stem.wordnet.WordNetLemmatizer)\n",
+    "    Outputs:\n",
+    "        list(str): tokenized text\n",
+    "    \"\"\"\n",
+    "    text = text.lower()\n",
+    "    text = re.sub('\\'s', '', text)\n",
+    "    text = re.sub('\\'', '', text)\n",
+    "    translator = str.maketrans(string.punctuation, ' '*len(string.punctuation))\n",
+    "    out = text.translate(translator)\n",
+    "    arr = nltk.word_tokenize(out)\n",
+    "    ans = []\n",
+    "    for word in arr:\n",
+    "        try:\n",
+    "            w = lemmatizer.lemmatize(word)\n",
+    "            ans.append(w)\n",
+    "        except:\n",
+    "            continue\n",
+    "    return ans\n",
+    "\n",
+    "#youtube_data['title'].str.lower().str.split()\n",
+    "#youtube_data['title'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "youtube_data['titleWords'] = youtube_data['title'].apply(lambda x: process(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'collections' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-149-c01044b46e6f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mwords\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0myoutube_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'titleWords'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcounter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcollections\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCounter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwords\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'collections' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "words = youtube_data['titleWords'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('the', 13463), ('of', 7031), ('to', 6098), ('2', 5776), ('and', 5738), ('in', 5639), ('a', 5187), ('1', 4293), ('v', 3999), ('on', 3769), ('3', 3542), ('video', 3372), ('how', 3303), ('for', 3171), ('with', 3104), ('by', 3038), ('part', 3002), ('live', 2666), ('at', 2644), ('4', 2416), ('hd', 2360), ('5', 2086), ('new', 2062), ('review', 2045), ('my', 2042), ('music', 1878), ('2012', 1872), ('2013', 1856), ('cover', 1724), ('2011', 1684), ('i', 1657), ('dance', 1642), ('you', 1596), ('2014', 1548), ('2010', 1404), ('game', 1403), ('trailer', 1383), ('official', 1377), ('world', 1366), ('10', 1335), ('day', 1277), ('guitar', 1236), ('from', 1231), ('6', 1172), ('black', 1141), ('me', 1093), ('it', 1091), ('gameplay', 1079), ('your', 1069), ('is', 1063), ('tutorial', 1062), ('dj', 1060), ('2009', 1047), ('up', 1022), ('play', 1008), ('one', 1002), ('all', 998), ('love', 980), ('2015', 980), ('7', 977), ('best', 970), ('show', 962), ('12', 939), ('8', 916), ('11', 913), ('minecraft', 907), ('band', 883), ('episode', 872), ('make', 864), ('final', 855), ('first', 830), ('school', 822), ('song', 806), ('highlight', 792), ('star', 787), ('no', 759), ('car', 757), ('time', 755), ('tour', 748), ('top', 748), ('high', 742), ('x', 741), ('war', 717), ('2008', 715), ('test', 714), ('team', 713), ('piano', 712), ('get', 708), ('com', 661), ('super', 657), ('free', 655), ('night', 649), ('13', 645), ('full', 643), ('9', 643), ('battle', 642), ('out', 637), ('rock', 636), ('unboxing', 631), ('14', 623)]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "662951"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import collections\n",
+    "counter = collections.Counter(words)\n",
+    "print(counter.most_common(100))\n",
+    "len(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('liebherr', 1), ('lb', 1), ('28', 1), ('rotary', 1), ('drilling', 1), ('rig', 1), ('deep', 1), ('foundation', 1), ('rita', 1), ('os', 1), ('never', 1), ('let', 1), ('lyric', 1), ('video', 1), ('sylvan', 1), ('love', 1), ('upload', 1), ('apple', 1), ('day', 1), ('hcg', 1), ('serenade', 1), ('cuckoo', 1), ('guitar', 1), ('piano', 1), ('jazz', 1), ('cover', 1), ('roland', 1), ('kirk', 1), ('yvan', 1), ('jacques', 1), ('ellen', 1), ('scare', 1), ('staff', 1), ('lol', 1), ('arkham', 1), ('monster', 1), ('drawing', 1), ('incredible', 1), ('hulk', 1), ('stephen', 1), ('holcomb', 1), ('phil', 1), ('taylor', 1), ('back', 1), ('winning', 1), ('way', 1), ('premier', 1), ('league', 1), ('nottingham', 1), ('star', 1), ('trek', 1), ('darkness', 1), ('3d', 1), ('download', 1), ('chair', 1), ('dance', 1), ('studio', 1), ('need', 1), ('speed', 1), ('world', 1), ('airtime', 1), ('achievement', 1), ('nissan', 1), ('gt', 1), ('r', 1), ('r35', 1), ('talking', 1), ('tom', 1), ('jungle', 1), ('shot', 1), ('gameplay', 1), ('hd', 1), ('high', 1), ('score', 1), ('ionikos', 1), ('ever', 1), ('handball', 1), ('best', 1), ('goal', 1), ('vol', 1), ('3', 1), ('power', 1), ('shinee', 1), ('dream', 1), ('girl', 1), ('live', 1), ('moon', 1), ('hollow', 1), ('matrix', 1), ('pt1', 1), ('waialeale', 1), ('blue', 1), ('hole', 1), ('adventure', 1), ('rampla', 1), ('4', 1), ('wmv', 1), ('orchard', 1), ('kent', 1), ('uk', 1)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "stopwords=nltk.corpus.stopwords.words('english')\n",
+    "realWords = collections.Counter()\n",
+    "for word in counter:\n",
+    "    if word not in stopwords:\n",
+    "        realWords[word] += 1\n",
+    "len(realWords)\n",
+    "print(realWords.most_common(100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-170-d5fdb59f019d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0myoutube_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miterrows\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrealWords\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"titleWords\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mwordViewCnt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m                 \u001b[0mwordViewCnt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"viewCount\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/pandas/core/series.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    621\u001b[0m         \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_apply_if_callable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    622\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 623\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_value\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    624\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    625\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mis_scalar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_value\u001b[0;34m(self, series, key)\u001b[0m\n\u001b[1;32m   2558\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2559\u001b[0m             return self._engine.get_value(s, k,\n\u001b[0;32m-> 2560\u001b[0;31m                                           tz=getattr(series.dtype, 'tz', None))\n\u001b[0m\u001b[1;32m   2561\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2562\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minferred_type\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'integer'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'boolean'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/pandas/core/series.py\u001b[0m in \u001b[0;36mdtype\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    345\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    346\u001b[0m     \u001b[0;31m# ndarray compatibility\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 347\u001b[0;31m     \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    348\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    349\u001b[0m         \u001b[0;34m\"\"\" return the dtype object of the underlying data \"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "wordViewCnt = dict()\n",
+    "numVidsPerWord = dict()\n",
+    "for index, row in youtube_data.iterrows():\n",
+    "    for word in realWords:\n",
+    "        if word in row[\"titleWords\"]:\n",
+    "            if word in wordViewCnt:\n",
+    "                wordViewCnt[word] += row[\"viewCount\"]\n",
+    "                numVidsPerWord[word] += 1\n",
+    "            else:\n",
+    "                wordViewCnt[word] = row[\"viewCount\"]\n",
+    "                numVidsPerWord[word] = 1\n",
+    "avgViewCntPerWord = dict()\n",
+    "for word in realWords:\n",
+    "    avgViewCntPerWord[word] = wordViewCnt[word]/numVidsPerWord[word]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
