Initial results with random forest, yay

--- a/Visualization.ipynb
+++ b/Visualization.ipynb
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false
    },
@@ -1414,28 +1414,114 @@
     "P = np.random.permutation(len(youtube_data1.index))\n",
     "labels = youtube_data1['outlier'].apply(lambda x: 1 if x == 'outlier' else 0)\n",
     "reg_target = youtube_data1['viewCount']\n",
-    "feature_cols = [True if col != 'outlier' and col != 'viewCount' else False for col in youtube_data1.columns]\n",
+    "feature_cols = [True if col not in ['outlier', 'viewCount', 'title', 'description', 'id', 'tags', 'topics', 'channelTitle', 'titleWords', 'pos_tags', 'pos_freq'] else False for col in youtube_data1.columns]\n",
     "features = youtube_data1.loc[:,  feature_cols]\n",
+    "features = features.fillna(0)\n",
     "split_tr = math.ceil(len(P) * 0.60)\n",
     "split_cv = math.ceil(len(P) * 0.80)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 111,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['commentCount', 'favoriteCount', 'dislikeCount', 'likeCount',\n",
+      "       'mean_title', 'max_title', 'min_title', 'topics_features', 'game',\n",
+      "       'vehicle', 'video_game', 'concert', 'car', 'title_CC', 'title_CD',\n",
+      "       'title_DT', 'title_EX', 'title_IN', 'title_JJ', 'title_JJR',\n",
+      "       'title_JJS', 'title_LS', 'title_MD', 'title_NN', 'title_NNP',\n",
+      "       'title_NNS', 'title_PDT', 'title_POS', 'title_PRP', 'title_PRP$',\n",
+      "       'title_RB', 'title_RBR', 'title_RBS', 'title_RP', 'title_TO',\n",
+      "       'title_UH', 'title_VB', 'title_VBD', 'title_VBG', 'title_VBN',\n",
+      "       'title_VBP', 'title_VBZ', 'title_WDT', 'title_WP', 'title_WRB',\n",
+      "       'titlePos', 'titleNeg', 'titleNeu', 'titleCompound', 'descriptionPos',\n",
+      "       'descriptionNeg', 'descriptionNeu', 'descriptionCompound'],\n",
+      "      dtype='object')\n",
+      "commentCount             int64\n",
+      "favoriteCount            int64\n",
+      "dislikeCount             int64\n",
+      "likeCount                int64\n",
+      "mean_title             float64\n",
+      "max_title              float64\n",
+      "min_title              float64\n",
+      "topics_features          int64\n",
+      "game                     int64\n",
+      "vehicle                  int64\n",
+      "video_game               int64\n",
+      "concert                  int64\n",
+      "car                      int64\n",
+      "title_CC                 int64\n",
+      "title_CD                 int64\n",
+      "title_DT                 int64\n",
+      "title_EX                 int64\n",
+      "title_IN                 int64\n",
+      "title_JJ                 int64\n",
+      "title_JJR                int64\n",
+      "title_JJS                int64\n",
+      "title_LS                 int64\n",
+      "title_MD                 int64\n",
+      "title_NN                 int64\n",
+      "title_NNP                int64\n",
+      "title_NNS                int64\n",
+      "title_PDT                int64\n",
+      "title_POS                int64\n",
+      "title_PRP                int64\n",
+      "title_PRP$               int64\n",
+      "title_RB                 int64\n",
+      "title_RBR                int64\n",
+      "title_RBS                int64\n",
+      "title_RP                 int64\n",
+      "title_TO                 int64\n",
+      "title_UH                 int64\n",
+      "title_VB                 int64\n",
+      "title_VBD                int64\n",
+      "title_VBG                int64\n",
+      "title_VBN                int64\n",
+      "title_VBP                int64\n",
+      "title_VBZ                int64\n",
+      "title_WDT                int64\n",
+      "title_WP                 int64\n",
+      "title_WRB                int64\n",
+      "titlePos               float64\n",
+      "titleNeg               float64\n",
+      "titleNeu               float64\n",
+      "titleCompound          float64\n",
+      "descriptionPos         float64\n",
+      "descriptionNeg         float64\n",
+      "descriptionNeu         float64\n",
+      "descriptionCompound    float64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(features.columns)\n",
+    "print(features.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "tr_features, cv_features, te_features = features.loc[P[:split_tr]].values, features.loc[P[split_tr:split_cv]].values, features.loc[P[split_cv:]].values\n",
-    "tr_labels, cv_labels, te_labels = labels.loc[P[:split_tr]].values, labels.loc[P[split_tr:split_cv]].values, labels.loc[P[split_cv:]].values\n",
-    "tr_reg_target, cv_reg_target, te_reg_target = reg_target[P[:split_tr]].values, reg_target[P[split_tr:split_cv]].values, reg_target[P[split_cv:]].values"
+    "tr_features, cv_features, te_features = features.loc[P[:split_tr]].as_matrix(), features.loc[P[split_tr:split_cv]].as_matrix(), features.loc[P[split_cv:]].as_matrix()\n",
+    "tr_labels, cv_labels, te_labels = labels.loc[P[:split_tr]].as_matrix(), labels.loc[P[split_tr:split_cv]].as_matrix(), labels.loc[P[split_cv:]].as_matrix()\n",
+    "tr_reg_target, cv_reg_target, te_reg_target = reg_target[P[:split_tr]].as_matrix(), reg_target[P[split_tr:split_cv]].as_matrix(), reg_target[P[split_cv:]].as_matrix()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 113,
    "metadata": {
     "collapsed": false
    },
@@ -1445,7 +1531,7 @@
      "output_type": "stream",
      "text": [
       "64\n",
-      "(55315, 62) (18438, 62)\n",
+      "(55315, 53) (18438, 53)\n",
       "(55315,) (18438,)\n",
       "(55315,) (18438,)\n"
      ]
@@ -1460,22 +1546,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "setting an array element with a sequence.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-88-91fe68810ad0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[1;31m# RandomForest Classifier to differentiate Outliers\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0moutlier_clf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0moutlier_clf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtr_features\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtr_labels\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Accuracy: \"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mte_labels\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0moutlier_clf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mte_features\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mC:\\Users\\bsthayillam\\Anaconda3\\lib\\site-packages\\sklearn\\ensemble\\forest.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m    245\u001b[0m         \"\"\"\n\u001b[1;32m    246\u001b[0m         \u001b[1;31m# Validate or convert input data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m--> 247\u001b[0;31m         \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maccept_sparse\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"csc\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mDTYPE\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    248\u001b[0m         \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maccept_sparse\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'csc'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mensure_2d\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    249\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0msample_weight\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mC:\\Users\\bsthayillam\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    431\u001b[0m                                       force_all_finite)\n\u001b[1;32m    432\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m--> 433\u001b[0;31m         \u001b[0marray\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0morder\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0morder\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    434\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    435\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mensure_2d\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: setting an array element with a sequence."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:  0.925642694435\n",
+      "Accuracy:  0.668076797917\n"
      ]
     }
    ],
@@ -1488,7 +1569,11 @@
     "outlier_clf.fit(tr_features, tr_labels)\n",
     "print(\"Accuracy: \", (te_labels == outlier_clf.predict(te_features)).mean())\n",
     "\n",
-    "# RandomForest Regressor to predict viewcounts on nonOutlier data"
+    "# RandomForest Regressor to predict viewcounts on nonOutlier data\n",
+    "views_rgr = RandomForestRegressor()\n",
+    "views_rgr.fit(tr_features, tr_reg_target)\n",
+    "error = (te_reg_target - views_rgr.predict(te_features)) <= 100\n",
+    "print(\"Accuracy: \", error.mean())"
    ]
   }
  ],
