Random forest on outlier and nonOutlier data too

--- a/Visualization.ipynb
+++ b/Visualization.ipynb
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 162,
    "metadata": {
     "collapsed": false
    },
@@ -1417,15 +1417,24 @@
     "feature_cols = [True if col not in ['outlier', 'viewCount', 'title', 'description', 'id', 'tags', 'topics', 'channelTitle', 'titleWords', 'pos_tags', 'pos_freq'] else False for col in youtube_data1.columns]\n",
     "features = youtube_data1.loc[:,  feature_cols]\n",
     "features = features.fillna(0)\n",
+    "features_out = features[labels == 1].reset_index() # outlier features\n",
+    "features_nonOut = features[labels == 0].reset_index() # nonOutlier features\n",
+    "regtarget_out = reg_target[labels == 1].reset_index() # outlier viewCounts\n",
+    "regtarget_nonOut = reg_target[labels == 0].reset_index() # nonOutlier viewCounts\n",
     "split_tr = math.ceil(len(P) * 0.60)\n",
-    "split_cv = math.ceil(len(P) * 0.80)"
+    "split_cv = math.ceil(len(P) * 0.80)\n",
+    "P_out = np.random.permutation(features_out.shape[0])\n",
+    "P_nonOut = np.random.permutation(features_nonOut.shape[0])\n",
+    "split_out = math.ceil(len(P_out) * 0.70)\n",
+    "split_nonOut = math.ceil(len(P_nonOut) * 0.70)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 156,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1444,71 +1453,22 @@
       "       'titlePos', 'titleNeg', 'titleNeu', 'titleCompound', 'descriptionPos',\n",
       "       'descriptionNeg', 'descriptionNeu', 'descriptionCompound'],\n",
       "      dtype='object')\n",
-      "commentCount             int64\n",
-      "favoriteCount            int64\n",
-      "dislikeCount             int64\n",
-      "likeCount                int64\n",
-      "mean_title             float64\n",
-      "max_title              float64\n",
-      "min_title              float64\n",
-      "topics_features          int64\n",
-      "game                     int64\n",
-      "vehicle                  int64\n",
-      "video_game               int64\n",
-      "concert                  int64\n",
-      "car                      int64\n",
-      "title_CC                 int64\n",
-      "title_CD                 int64\n",
-      "title_DT                 int64\n",
-      "title_EX                 int64\n",
-      "title_IN                 int64\n",
-      "title_JJ                 int64\n",
-      "title_JJR                int64\n",
-      "title_JJS                int64\n",
-      "title_LS                 int64\n",
-      "title_MD                 int64\n",
-      "title_NN                 int64\n",
-      "title_NNP                int64\n",
-      "title_NNS                int64\n",
-      "title_PDT                int64\n",
-      "title_POS                int64\n",
-      "title_PRP                int64\n",
-      "title_PRP$               int64\n",
-      "title_RB                 int64\n",
-      "title_RBR                int64\n",
-      "title_RBS                int64\n",
-      "title_RP                 int64\n",
-      "title_TO                 int64\n",
-      "title_UH                 int64\n",
-      "title_VB                 int64\n",
-      "title_VBD                int64\n",
-      "title_VBG                int64\n",
-      "title_VBN                int64\n",
-      "title_VBP                int64\n",
-      "title_VBZ                int64\n",
-      "title_WDT                int64\n",
-      "title_WP                 int64\n",
-      "title_WRB                int64\n",
-      "titlePos               float64\n",
-      "titleNeg               float64\n",
-      "titleNeu               float64\n",
-      "titleCompound          float64\n",
-      "descriptionPos         float64\n",
-      "descriptionNeg         float64\n",
-      "descriptionNeu         float64\n",
-      "descriptionCompound    float64\n",
-      "dtype: object\n"
+      "(13097, 54)\n",
+      "(79094, 54)\n",
+      "(13097,)\n"
      ]
     }
    ],
    "source": [
     "print(features.columns)\n",
-    "print(features.dtypes)"
+    "print(features_out.shape)\n",
+    "print(features_nonOut.shape)\n",
+    "print(regtarget_out.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 159,
    "metadata": {
     "collapsed": false
    },
@@ -1521,7 +1481,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 167,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "tr_features_out, te_features_out = features_out.loc[P_out[:split_out]].as_matrix(), features_out.loc[P_out[split_out:]].as_matrix()\n",
+    "tr_features_nonOut, te_features_nonOut = features_nonOut.loc[P_nonOut[:split_nonOut]].as_matrix(), features_nonOut.loc[P_nonOut[split_nonOut:]].as_matrix()\n",
+    "tr_regtarget_out, te_regtarget_out = regtarget_out.loc[P_out[:split_out]]['viewCount'].values, regtarget_out.loc[P_out[split_out:]]['viewCount'].values\n",
+    "tr_regtarget_nonOut, te_regtarget_nonOut = regtarget_nonOut.loc[P_nonOut[:split_nonOut]]['viewCount'].values, regtarget_nonOut.loc[P_nonOut[split_nonOut:]]['viewCount'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
    "metadata": {
     "collapsed": false
    },
@@ -1533,7 +1507,11 @@
       "64\n",
       "(55315, 53) (18438, 53)\n",
       "(55315,) (18438,)\n",
-      "(55315,) (18438,)\n"
+      "(55315,) (18438,)\n",
+      "(9168, 54) (3929, 54)\n",
+      "(55366, 54) (23728, 54)\n",
+      "(9168,) (3929,)\n",
+      "(55366,) (23728,)\n"
      ]
     }
    ],
@@ -1541,12 +1519,16 @@
     "print(len(youtube_data.columns))\n",
     "print(tr_features.shape, te_features.shape)\n",
     "print(tr_labels.shape, te_labels.shape)\n",
-    "print(tr_reg_target.shape, te_reg_target.shape)"
+    "print(tr_reg_target.shape, te_reg_target.shape)\n",
+    "print(tr_features_out.shape, te_features_out.shape)\n",
+    "print(tr_features_nonOut.shape, te_features_nonOut.shape)\n",
+    "print(tr_regtarget_out.shape, te_regtarget_out.shape)\n",
+    "print(tr_regtarget_nonOut.shape, te_regtarget_nonOut.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 170,
    "metadata": {
     "collapsed": false
    },
@@ -1555,8 +1537,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.925642694435\n",
-      "Accuracy:  0.668076797917\n"
+      "Accuracy Classify:  0.926510467513\n",
+      "Accuracy all Views:  0.676917236143\n",
+      "Accuracy nonOutlier Views:  0.647125758597\n",
+      "Accuracy outlier Views:  0.636548740137\n"
      ]
     }
    ],
@@ -1567,13 +1551,25 @@
     "# RandomForest Classifier to differentiate Outliers\n",
     "outlier_clf = RandomForestClassifier()\n",
     "outlier_clf.fit(tr_features, tr_labels)\n",
-    "print(\"Accuracy: \", (te_labels == outlier_clf.predict(te_features)).mean())\n",
+    "print(\"Accuracy Classify: \", (te_labels == outlier_clf.predict(te_features)).mean())\n",
     "\n",
-    "# RandomForest Regressor to predict viewcounts on nonOutlier data\n",
+    "# RandomForest Regressor to predict viewcounts on all data\n",
     "views_rgr = RandomForestRegressor()\n",
     "views_rgr.fit(tr_features, tr_reg_target)\n",
     "error = (te_reg_target - views_rgr.predict(te_features)) <= 100\n",
-    "print(\"Accuracy: \", error.mean())"
+    "print(\"Accuracy all Views: \", error.mean())\n",
+    "\n",
+    "# RandomForest Regressor to predict viewcounts on nonOutlier data\n",
+    "views_rgr_nonOut = RandomForestRegressor()\n",
+    "views_rgr_nonOut.fit(tr_features_nonOut, tr_regtarget_nonOut)\n",
+    "error_nonOut = (te_regtarget_nonOut - views_rgr_nonOut.predict(te_features_nonOut)) <= 100\n",
+    "print(\"Accuracy nonOutlier Views: \", error_nonOut.mean())\n",
+    "\n",
+    "# RandomForest Regressor to predict viewcounts on outlier data\n",
+    "views_rgr_out = RandomForestRegressor()\n",
+    "views_rgr_out.fit(tr_features_out, tr_regtarget_out)\n",
+    "error_out = (te_regtarget_out - views_rgr_out.predict(te_features_out)) <= 100\n",
+    "print(\"Accuracy outlier Views: \", error_out.mean())"
    ]
   }
  ],
