Added neural network, need to tune parameters

--- a/Visualization.ipynb
+++ b/Visualization.ipynb
@@ -1621,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 217,
    "metadata": {
     "collapsed": false
    },
@@ -1638,7 +1638,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy Classify:  0.911758325198\n"
+      "Accuracy Classify:  0.919622518711\n"
      ]
     }
    ],
@@ -1651,7 +1651,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 222,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\bsthayillam\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\stochastic_gradient.py:128: FutureWarning: max_iter and tol parameters have been added in <class 'sklearn.linear_model.stochastic_gradient.SGDRegressor'> in 0.19. If both are left unset, they default to max_iter=5 and tol=None. If tol is not None, max_iter defaults to max_iter=1000. From 0.21, default max_iter will be 1000, and default tol will be 1e-3.\n",
+      "  \"and default tol will be 1e-3.\" % type(self), FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy all Views:  0.964963662002\n",
+      "Accuracy nonOutlier Views:  0.999957855698\n",
+      "Accuracy outlier Views:  0.998981929244\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import SGDRegressor\n",
+    "views_rgr_sgd = SGDRegressor(penalty=\"l1\")\n",
+    "views_rgr_sgd.fit(tr_features, tr_reg_target)\n",
+    "error_sgd = (te_reg_target - views_rgr_sgd.predict(te_features)) <= 0.5\n",
+    "print(\"Accuracy all Views: \", error_sgd.mean())\n",
+    "\n",
+    "views_rgr_nonOut_sgd = SGDRegressor(penalty=\"l1\")\n",
+    "views_rgr_nonOut_sgd.fit(tr_features_nonOut, tr_regtarget_nonOut)\n",
+    "error_nonOut_sgd = (te_regtarget_nonOut - views_rgr_nonOut_sgd.predict(te_features_nonOut)) <= 1.0  # Within 1 Std Dev\n",
+    "print(\"Accuracy nonOutlier Views: \", error_nonOut_sgd.mean())\n",
+    "\n",
+    "views_rgr_out_sgd = SGDRegressor(penalty=\"l1\")\n",
+    "views_rgr_out_sgd.fit(tr_features_out, tr_regtarget_out)\n",
+    "error_out_sgd = (te_regtarget_out - views_rgr_out_sgd.predict(te_features_out)) <= 0.5\n",
+    "print(\"Accuracy outlier Views: \", error_out_sgd.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
    "metadata": {
     "collapsed": false
    },
@@ -1660,38 +1703,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy all Views:  0.7128755830350363\n",
-      "Accuracy nonOutlier Views:  0.9974713418745785\n",
-      "Accuracy outlier Views:  0.0\n"
+      "Accuracy all Views:  0.969627942293\n",
+      "Accuracy nonOutlier Views:  0.993846931895\n",
+      "Accuracy outlier Views:  0.818528887758\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.linear_model import SGDRegressor\n",
-    "views_rgr_sgd = SGDRegressor(penalty=\"l1\")\n",
-    "views_rgr_sgd.fit(tr_features, tr_reg_target)\n",
-    "error_sgd = (te_reg_target - views_rgr_sgd.predict(te_features)) <= 100\n",
-    "print(\"Accuracy all Views: \", error_sgd.mean())\n",
+    "from sklearn.neural_network import MLPRegressor\n",
     "\n",
-    "views_rgr_nonOut_sgd = SGDRegressor(penalty=\"l1\")\n",
-    "views_rgr_nonOut_sgd.fit(tr_features_nonOut, tr_regtarget_nonOut)\n",
-    "error_nonOut_sgd = (te_regtarget_nonOut - views_rgr_nonOut_sgd.predict(te_features_nonOut)) <= 100\n",
-    "print(\"Accuracy nonOutlier Views: \", error_nonOut_sgd.mean())\n",
+    "views_mlp = MLPRegressor()\n",
+    "views_mlp.fit(tr_features, tr_reg_target)\n",
+    "error_mlp = (te_reg_target - views_mlp.predict(te_features)) <= 0.5\n",
+    "print(\"Accuracy all Views: \", error_mlp.mean())\n",
     "\n",
-    "views_rgr_out_sgd = SGDRegressor(penalty=\"l1\")\n",
-    "views_rgr_out_sgd.fit(tr_features_out, tr_regtarget_out)\n",
-    "error_out_sgd = (te_regtarget_out - views_rgr_out_sgd.predict(te_features_out)) <= 100\n",
-    "print(\"Accuracy outlier Views: \", error_out_sgd.mean())"
+    "views_mlp_nonOut = MLPRegressor()\n",
+    "views_mlp_nonOut.fit(tr_features_nonOut, tr_regtarget_nonOut)\n",
+    "error_mlp_nonOut = (te_regtarget_nonOut - views_mlp_nonOut.predict(te_features_nonOut)) <= 1.0  # Within 1 Std Dev\n",
+    "print(\"Accuracy nonOutlier Views: \", error_mlp_nonOut.mean())\n",
+    "\n",
+    "views_mlp_out = MLPRegressor()\n",
+    "views_mlp_out.fit(tr_features_out, tr_regtarget_out)\n",
+    "error_mlp_out = (te_regtarget_out - views_mlp_out.predict(te_features_out)) <= 0.5\n",
+    "print(\"Accuracy outlier Views: \", error_mlp_out.mean())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
