Formatting changes, TOC, added LR to results table

--- a/Predicting Youtube View Counts.ipynb
+++ b/Predicting Youtube View Counts.ipynb
@@ -22,14 +22,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this project our goal was to analyze what features of youtube videos contribute most to its view count. It is interesting to see, given a new video, how many views we could predict that video to have. Knowing certain features influence view count could help a youtube influencer better promote their video."
+    "In this project our goal was to analyze what features of youtube videos contribute most to its view count. It is interesting to see, given a new video, how many views we could predict that video to have. Knowing certain features influence view count could help a youtube influencer better promote their video.\n",
+    "\n",
+    "## Table of Contents\n",
+    "1. [Data Collection](#collection)\n",
+    "2. [Data](#data)\n",
+    "3. [Feature Selection](#selection)\n",
+    "4. [ML Analysis](#ml)\n",
+    "5. [Future Plans](#plans)\n",
+    "6. [References](#reference)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Collection"
+    "## Data Collection\n",
+    "<a id='collection'></a>"
    ]
   },
   {
@@ -74,21 +83,21 @@
     "\n",
     "#from youtube API documentation\n",
     "def remove_empty_kwargs(**kwargs):\n",
-    "  good_kwargs = {}\n",
-    "  if kwargs is not None:\n",
-    "    for key, value in kwargs.items():\n",
-    "      if value:\n",
-    "        good_kwargs[key] = value\n",
-    "  return good_kwargs\n",
+    "    good_kwargs = {}\n",
+    "    if kwargs is not None:\n",
+    "        for key, value in kwargs.items():\n",
+    "            if value:\n",
+    "                good_kwargs[key] = value\n",
+    "    return good_kwargs\n",
     "\n",
     "#from youtube API documentation\n",
     "def videos_list_by_id(client, **kwargs):\n",
-    "  kwargs = remove_empty_kwargs(**kwargs)\n",
-    "\n",
-    "  response = client.videos().list(\n",
-    "    **kwargs\n",
-    "  ).execute()\n",
-    "  return response\n",
+    "    kwargs = remove_empty_kwargs(**kwargs)\n",
+    "    \n",
+    "    response = client.videos().list(\n",
+    "        **kwargs\n",
+    "    ).execute()\n",
+    "    return response\n",
     "\n",
     "#from youtube API documentation\n",
     "def get_authenticated_service():\n",
@@ -165,7 +174,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data "
+    "## Data \n",
+    "<a id='data'></a>"
    ]
   },
   {
@@ -192,7 +202,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature Selection"
+    "## Feature Selection\n",
+    "<a id='selection'></a>"
    ]
   },
   {
@@ -241,7 +252,9 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -281,7 +294,9 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -330,7 +345,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -384,7 +401,9 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -434,7 +453,9 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -467,7 +488,9 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -500,7 +523,9 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -551,7 +576,9 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -644,6 +671,7 @@
    "cell_type": "code",
    "execution_count": 112,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -663,7 +691,9 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -811,6 +841,7 @@
    "cell_type": "code",
    "execution_count": 169,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -847,6 +878,7 @@
    "cell_type": "code",
    "execution_count": 163,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -882,7 +914,9 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -924,7 +958,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -961,7 +997,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1004,7 +1042,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1047,7 +1087,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1202,7 +1244,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1235,7 +1279,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1268,7 +1314,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1301,7 +1349,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1334,7 +1384,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1367,7 +1419,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1400,7 +1454,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1433,7 +1489,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1466,7 +1524,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1506,7 +1566,9 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1546,7 +1608,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ML Analysis"
+    "## ML Analysis\n",
+    "<a id='ml'></a>"
    ]
   },
   {
@@ -1559,7 +1622,9 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import math\n",
@@ -1626,7 +1691,9 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1663,7 +1730,9 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1708,7 +1777,9 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1748,6 +1819,7 @@
    "cell_type": "code",
    "execution_count": 110,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -1776,10 +1848,6 @@
     "views_rgr_nonOut.fit(tr_features_nonOut, tr_regtarget_nonOut)\n",
     "error_nonOut = np.mean(np.square(te_regtarget_nonOut - views_rgr_nonOut.predict(te_features_nonOut)))\n",
     "mlp_r = error_nonOut.mean()\n",
-    "print(\"MSE Regression: \", mlp_r)\n",
-    "\n",
-    "error_nonOut = np.mean(np.square(tr_regtarget_nonOut - views_rgr_nonOut.predict(tr_features_nonOut)))\n",
-    "mlp_r = error_nonOut.mean()\n",
     "print(\"MSE Regression: \", mlp_r)"
    ]
   },
@@ -1793,7 +1861,9 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1811,14 +1881,14 @@
     "# Logistic Regression Classifier to differentiate Outliers\n",
     "outlier_clf = LogisticRegression()\n",
     "outlier_clf.fit(tr_features, tr_labels)\n",
-    "rf_c = (te_labels == outlier_clf.predict(te_features)).mean()\n",
+    "lr_c = (te_labels == outlier_clf.predict(te_features)).mean()\n",
     "print(\"Accuracy Classification: \", rf_c)\n",
     "\n",
     "# Linear Regression Regressor to predict viewcounts on nonOutlier data\n",
     "views_rgr_nonOut = LinearRegression()\n",
     "views_rgr_nonOut.fit(tr_features_nonOut, tr_regtarget_nonOut)\n",
     "error_nonOut = np.mean(np.square(te_regtarget_nonOut - views_rgr_nonOut.predict(te_features_nonOut)))\n",
-    "rf_r = error_nonOut.mean()\n",
+    "lr_r = error_nonOut.mean()\n",
     "print(\"MSE Regression: \", rf_r)"
    ]
   },
@@ -1834,7 +1904,9 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1849,9 +1921,9 @@
     }
    ],
    "source": [
-    "l1 = [\"Baseline\", \"MLP\", \"Gradient Boosting\", \"Random Forest\"]\n",
-    "cl = [baseline_classification, mlp_c, gb_c, rf_c]\n",
-    "r = [baseline_regression, mlp_r, gb_r, rf_r]\n",
+    "l1 = [\"Baseline\", \"MLP\", \"Gradient Boosting\", \"Random Forest\", \"Regression\"]\n",
+    "cl = [baseline_classification, mlp_c, gb_c, rf_c, lr_c]\n",
+    "r = [baseline_regression, mlp_r, gb_r, rf_r, lr_r]\n",
     "\n",
     "df = pd.concat([pd.Series(l1), pd.Series(cl), pd.Series(r)], axis = 1)\n",
     "df.columns = [\"Algorithm\", \"Accuracy_Classification\", \"MSE_Regression\"]\n",
@@ -1873,7 +1945,9 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1903,7 +1977,9 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1941,7 +2017,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Future Plans"
+    "### Added Value of Non-LikeCount Features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Future Plans\n",
+    "<a id='plans'></a>"
    ]
   },
   {
@@ -1953,16 +2037,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### References"
+    "## References\n",
+    "<a id='reference'></a>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://towardsdatascience.com/the-random-forest-algorithm-d457d499ffcd\n",
-    "http://scikit-learn.org/stable/modules/ensemble.html\n",
-    "http://scikit-learn.org/stable/modules/neural_networks_supervised.html"
+    "* YouTube 8M Tensorflow Dataset: [https://research.google.com/youtube8m/download.html](https://research.google.com/youtube8m/download.html)\n",
+    "* Random Forest Algorithm: [https://towardsdatascience.com/the-random-forest-algorithm-d457d499ffcd](https://towardsdatascience.com/the-random-forest-algorithm-d457d499ffcd)\n",
+    "* Ensemble Methods (Random Forests/GBRT) Documentation: [http://scikit-learn.org/stable/modules/ensemble.html](http://scikit-learn.org/stable/modules/ensemble.html)\n",
+    "* Multi-Layer Perceptron Documentation: [http://scikit-learn.org/stable/modules/neural_networks_supervised.html](http://scikit-learn.org/stable/modules/neural_networks_supervised.html)\n",
+    "* Linear Models Documentation: [http://scikit-learn.org/stable/modules/classes.html#module-sklearn.linear_model](http://scikit-learn.org/stable/modules/classes.html#module-sklearn.linear_model)"
    ]
   }
  ],
@@ -1982,7 +2069,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
